--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
   </head>
   <body>
     <h1>
-      This is a kuman514's homepage using Vercel!
+      VanillaJS Todo app on Vercel!
     </h1>
+    <main class="app">
+      <noscript>
+        You must activate JavaScript to run this app.
+      </noscript>
+    </main>
+
+    <!-- Put components here -->
+    <!-- =================== -->
+
+    <script src="./js/app.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
