--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </main>
 
     <!-- Put components here -->
+    <script src="./js/components/todoitem.js"></script>
     <script src="./js/components/todolist.js"></script>
     <!-- =================== -->
 
