deploy: implement todo app (#2)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </main>
 
     <!-- Put components here -->
+    <script src="./js/components/todoinput.js"></script>
+    <script src="./js/components/todoitem.js"></script>
+    <script src="./js/components/todolist.js"></script>
     <!-- =================== -->
 
     <script src="./js/app.js"></script>
